Switch to react views
* Render react app under the `spa` view (`posts#index`, `posts#edit`);
* Add react router;
* Use hydrated props for the first page load, use the API otherwise;
* Add post edit page stub;
* Rearrange components;
* Refactor.

--- a/app/javascript/components/PostListPage/PostListPage.scss
+++ b/app/javascript/components/PostListPage/PostListPage.scss
@@ -1,13 +1,4 @@
-.layout {
-  height: 100%;
-}
-
-.layout__content {
-  padding: 3rem 2rem 4rem;
-}
-
-.layout__title {
-  font-size: 3rem;
+.post-list-page {
 }
 
 .post-list {
@@ -22,6 +13,6 @@
 .post-list__empty-placeholder {
 }
 
-.post-list-actions {
+.post-list-page__actions {
   margin-top: 2.5rem;
 }
