Standardize API, handle `relation` components
* /posts/create: Create and add components with hardcoded schema:
  * string Title;
  * boolean Published;
  * string Body;
  * relation Comments (create 1..3 comment posts);
* /posts: Render posts recursively;

--- a/app/javascript/components/ComponentPost/ComponentPost.scss
+++ b/app/javascript/components/ComponentPost/ComponentPost.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/stylesheets/helpers";
 
-.post-edit-page {
+.component-post {
 
   &__loading {
     @extend %loading;
@@ -10,12 +10,6 @@
     @extend %error;
   }
 
-  &__form {
-    margin-top: 1rem;
-    background-color: #fff;
-  }
-
-  &__actions {
-    margin-top: 2.5rem;
+  &__post {
   }
 }
