--- a/app/javascript/components/Component/Component.scss
+++ b/app/javascript/components/Component/Component.scss
@@ -21,12 +21,14 @@
   }
 
   &__relation-value {
-    margin-left: 2rem;
+    margin-left: .2rem;
+    border-left: 1px dashed;
+    padding-left: 1rem;
   }
 
   &__post {
     margin-top: 1rem;
-    border: 1px solid;
+    border: 1px dashed;
   }
 
   &__error {
